@@ -30,7 +30,7 @@ module Druid
       def find_index_by_title(title)
         table = element.parent
         first_row = table[0]
-        first_row.cells.find_index { |column| column.text == title}
+        first_row.cells.find_index { |column| column.text.include? title}
       end
 
     end
